Alterado para realizar disparar erros e testar